--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
-  # awards:
-  # summary:
+- degree: Multi-Sensory Bagel Quality Testing
+  uni: Univ. of Kalamazoo
+  year: March, 1347 &mdash; August, 1386
+  awards: Golden Nose for Cheese Detection and Identification in Bagels
+  summary: Learned everything there is to know about bagel history, production, and flavor profiles
